# instant-meshes-core

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: CPM.cmake  dset.cmake  onetbb.cmake  pcg32.cmake  pss.cmake
ext/dset/: dset.h
ext/pcg32/: pcg32.h
ext/pss/: parallel_stable_sort.h  pss_common.h
include/: aabb.h  adjacency.h  bvh.h  cleanup.h  common.h  dedge.h  extract.h  field.h  hierarchy.h  meshstats.h  normal.h  reorder.h  smoothing.h  subdivide.h
src/: adjacency.cpp  bvh.cpp  cleanup.cpp  dedge.cpp  extract.cpp  field.cpp  hierarchy.cpp  meshstats.cpp  normal.cpp  nprocs.cpp  reorder.cpp  smoothing.cpp  subdivide.cpp
